--- a/frontend_app/src/index.html
+++ b/frontend_app/src/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Angular</title>
+  <title>Recipe Explorer</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="theme-color" content="#2563EB">
+  <meta name="description" content="Browse, search, and view delicious recipes.">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
